--- a/frontpage/css/night.css
+++ b/frontpage/css/night.css
@@ -11,7 +11,7 @@ a:hover { text-decoration: none; color: #ADABAE; }
 
 }
 
-.cell-content {
+.content {
     color: #ADABAE !important;
     /*color: #999;*/
 }
